# coursework

./: .gitignore  CMakeLists.txt  README.md  token.txt
app/: CMakeLists.txt  Doxyfile  Makefile
app/libs/: CMakeLists.txt
app/libs/filesystem_db/: filesystem_db.cpp  filesystem_db.h
app/libs/pgsql_db/: CMakeLists.txt  pgsql_db.cpp  pgsql_db.h
app/src/: CMakeLists.txt  main.cpp
app/src/answers/: answers.cpp  answers.h
app/static/: header.tex
database/: README.md
docker/: Dockerfile  build_docker.sh  docker-compose.yaml  master.Dockerfile  run_docker.sh  servers.json  tg_token.secret.txt
docs/: Doxyfile  database.sql
libs/: CMakeLists.txt
libs/filesystem_db/: CMakeLists.txt  filesystem_db.cpp  filesystem_db.h
libs/telebot/: CMakeLists.txt  telebot.cpp  telebot.h
src/: CMakeLists.txt  filesystem_db.cpp  filesystem_db.h  main.cpp  source.cpp
src/answers/: answers.cpp  answers.h
